Check JPMS module exports for direct SAM signature and exception types
A public type in a named module's non-exported package was still treated as
accessible, so a wrapper crashed with IllegalAccessError on first invocation
instead of rejecting cleanly at conversion.